Fix spacing

--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -93,6 +93,10 @@ p {
   color: white;
 }
 
+.weather-img {
+  margin-top: 100px;
+}
+
 @media (max-width: 992px) {
   .hero {
     padding: 80px 0;
